package domain.huellaDeCarbono.medioDeTransporte;

public class ServicioContratado {
  private TipoServicioContratado tipo;

  public ServicioContratado(TipoServicioContratado tipo) {
    this.tipo = tipo;
  }
}
