package domain.huellaDeCarbono.medioDeTransporte;

public enum TipoCombustible {
  GNC,
  NAFTA,
  ELECTRICO,
  GASOIL
}
