package domain.huellaDeCarbono.medioDeTransporte;

public enum TipoNoMotorizado {
  BICI,
  A_PIE,
  OTROS
}
