package domain.huellaDeCarbono.medioDeTransporte;

public enum TipoServicioContratado {
  TAXI,
  REMIS
}
