package domain.huellaDeCarbono.medioDeTransporte;

public enum TipoTransportePublico {
  TREN,
  SUBTE,
  COLECTIVO
}
