package domain.huellaDeCarbono.medioDeTransporte;

public enum TipoVehiculo {
  AUTO,
  MOTO,
  CAMIONETA,
}
