package domain.miembro;

public enum TipoDocumento {
  DNI,
  LE,
  LC
}
