package domain.organizacion;

public enum Clasificacion {
  MINISTERIO,
  UNIVERSIDAD,
  ESCUELA,
  ESCUELA_DEL_SECTOR_PRIMARIO,
  ESCUELA_DEL_SECTOR_SECUNDARIO
}
